--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -9,4 +9,5 @@
 that is our post path where you can create posts, just write the text you want to post and you can post images too, So, write or upload your post and click "Post" button. </p><br><br>
 <h4>Writing a comment/like on post:</h4>
 <p>Writing a comment/like in Growlithe post is so easy, you just need to click the Posts link at your navbar and you'll see all posts that Growlithe have, you'll also see like and comment section in post page.</p>
+<center>Have fun on Growlithe!</center>
 </div>
